--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 *{
   box-sizing: border-box;
-  
+  overflow:hidden;
 }
 
 body {
@@ -12,7 +12,8 @@ body {
 }
 
 p{
-  line-height:26px;
+  line-height:20px;
+  font-size:14px;
 }
 
 a{
@@ -24,12 +25,33 @@ a:hover{
   color: #1259b0;
 }
 
-h1{
-  color: #1a78eb;
+h2{
+padding-top:10px
+}
+
+li{
+  list-style-type:none;
+  background-color: white;
+  margin-bottom:10px;
+  padding:10px;
+  margin-right:20px;
+}
+
+ul{
+  padding-left:0px;
+  padding-bottom:50px;
 }
 
 h3{
   margin-bottom:10px;
+}
+
+h4, p{
+  margin:0px;
+}
+
+h4{
+  margin-bottom:5px;
 }
 
 .container {
@@ -40,6 +62,9 @@ h3{
 
 #nav{
   padding:0px;
+  padding-bottom:20px;
+  padding-top:20px;
+  max-height:10vh;
 }
 
 /* header */
@@ -416,12 +441,28 @@ select.states option:hover {
   }
 
   .map-filters{
-    width: 20%;
+    width: 22%;
     margin-right:2%;
+    max-height:90vh;
+    overflow-y:scroll;
   }
 
   .mapboxgl-ctrl-top-right {
     margin-top: 65px;
+}
+
+.top-filters{
+  display:flex;
+  width:650px;
+}
+
+.top-filters div{
+  margin:auto;
+}
+
+.top-filters h4{
+  color:white;
+  margin-bottom:10px;
 }
 
 #map {
