--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 *{
   box-sizing: border-box;
-  overflow:hidden;
 }
 
 body {
@@ -61,10 +60,11 @@ h4{
 }
 
 #nav{
-  padding:0px;
+  padding:20px;
   padding-bottom:20px;
   padding-top:20px;
-  max-height:10vh;
+  max-height:200px;
+  color:white;
 }
 
 /* header */
@@ -420,7 +420,26 @@ select.states option:hover {
   background:url("https://flevix.com/wp-content/uploads/2019/07/Untitled-2.gif") no-repeat center center rgba(0,0,0,0.25)
 }
 
+.map-filters{
+  width: 100%;
+  max-height:200px;
+  overflow-y:scroll;
+  margin-top:100px;
+}
+
 @media (min-width: 768px) {
+
+  *{
+    overflow:hidden;
+  }
+
+  #nav{
+    padding:0px;
+    padding-bottom:20px;
+    padding-top:20px;
+    max-height:100vh;
+  }
+
   .header li {
     float: left;
   }
@@ -441,6 +460,7 @@ select.states option:hover {
   }
 
   .map-filters{
+    margin-top:0px;
     width: 22%;
     margin-right:2%;
     max-height:90vh;
