--- a/css/index.css
+++ b/css/index.css
@@ -13,11 +13,23 @@
   }
 
   #mapView {
-    position:absolute;
-    top:0px;
-    width: 75%;
-    height:98vh;
+    width: 100%;
+    height:60vh;
     margin-top: 0%;
+  }
+
+  @media (min-width: 960px){
+    #mapView {
+        position:absolute;
+        top:0px;
+        width:75%;
+        height:98vh;
+        margin-top: 0%;
+      }
+
+    .mapboxgl-canvas{
+        margin-right:0px;
+    }
   }
 
   #mapView canvas {
@@ -38,10 +50,12 @@
     height: 14px;
     border-radius: 50%;
     cursor: pointer;
-    background-color: #A4C8E1;
+    background-color: #7db4db;
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.5);
     /** transition: 0.3s; **/
     transform-origin: center;
+    outline:1px solid white;
+
   }
 
   .marker:hover {
@@ -49,11 +63,11 @@
   }
 
   .marker-red {
-    background-image: url('img/mapbox-icon-red.png')
+    background-image: url('img/mapbox-icon-red.png');
   }
 
   .marker-green {
-    background-image: url('img/mapbox-icon-green-01.png')
+    background-image: url('img/mapbox-icon-green-01.png');
   }
 
   .marker-blue {
@@ -65,7 +79,7 @@
   }
 
   .marker-yellow {
-    background-image: url('img/mapbox-icon-yellow-01.png')
+    background-image: url('img/mapbox-icon-yellow-01.png');
   }
 
   .emphasized {
