--- a/css/index.css
+++ b/css/index.css
@@ -12,9 +12,13 @@
     padding:0 15px;
   }
 
+  .v-application--wrap{
+    min-height: 230px!important;
+    }
+
   #mapView {
     width: 100%;
-    height:60vh;
+    height:calc(70vh - 155px);
     margin-top: 0%;
   }
 
@@ -23,7 +27,7 @@
         position:absolute;
         top:0px;
         width:75%;
-        height:98vh;
+        height:calc(100vh - 155px);
         margin-top: 0%;
       }
 
@@ -88,7 +92,7 @@
     box-shadow: 0px 0px 2px 0px rgba(111, 219, 246, 0.708);
   }
 
-  .v-list, #description{
+  #result-list, #result-description{
     height: 50vh;
     /* or any height you want */
     overflow-y: auto
