header icons brand standards

--- a/css/index.css
+++ b/css/index.css
@@ -166,3 +166,20 @@ nav a{
   .navbar-brand {
     margin-left:5px;
   }
+
+#uconn-banner .row-container {
+  width: 100%;
+  margin: 0px auto;
+  box-sizing: border-box;
+  padding-top:0px;
+  padding-bottom:0px;
+}
+
+#uconn-banner #button-container .btn, #uconn-banner #button-container .btn:hover, #uconn-banner #button-container .btn:visited, #uconn-banner #button-container .btn:focus{
+  background-color:transparent!important;
+  border:0px!important;
+}
+
+#uconn-banner .row-container #uconn-az:focus+div:not(.popup-container), #uconn-banner .row-container #uconn-az:hover+div:not(.popup-container), #uconn-banner .row-container #uconn-search:focus+div:not(.popup-container), #uconn-banner .row-container #uconn-search:hover+div:not(.popup-container) {
+  top: 60px!important;
+}
